--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,7 @@
                                 <a href="tel:8051800912" class="text-white">8051800912</a>
                             </div>
                             <p class="text-white mb-4">Same Day Service | Free Estimate | 1 Year Warranty</p>
-                            <a href="https://wa.me/918298982525?text=Hello%20AS%20Enterprises%2C%20I%20need%20emergency%20plumbing%20service%20in%20Muzaffarpur" 
+                            <a href="https://wa.me/+918298982525?text=Hello%20AS%20Enterprises%2C%20I%20need%20emergency%20plumbing%20service%20in%20Muzaffarpur" 
                                class="whatsapp-btn" target="_blank">
                                 <i class="fab fa-whatsapp"></i> WhatsApp पर बात करें
                             </a>
