--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta name="keywords" content="plumber in Muzaffarpur, emergency plumber Muzaffarpur, plumber in Mithanpura, नलसाज मुजफ्फरपुर, पाइप लीक रिपेयर, ड्रेन क्लीनिंग, invisible grill, bird net, child safety grill, best plumber near me, water heater repair, सस्ता प्लम्बर">
     <meta name="author" content="AS Enterprises Solution">
     <link rel="canonical" href="https://www.asenterprisesmuzaffarpur.com/">
-    
+
+    <meta name="google-site-verification" content="EtrG7vQdy0quHegtUYQbt6IV3Dg5WWH21aBiZAQzF4U" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.asenterprisesmuzaffarpur.com/">
